# AV-Caption

./: .gitignore  README.md  batch_caption.py  batch_caption_offline.py  count_files.py  download_egomotion_offline.py  fix_clips.json  generate_shards.py  pyproject.toml  run_sample20.sh  sample_20.json  start_vllm.sh  start_vllm_multi.sh  test_8b.py
caption_refine/: DISTRIBUTED.md  PIPELINE.md  SERVER_SETUP.md  batch_runner.py  config.py  cosmos_client.py  my_clips.json  pipeline.py  prompts.py  pyproject.toml  run_distributed.sh
caption_refine/stages/: __init__.py  stage1_ground.py  stage2_extract.py  stage3_verify.py  stage4_refine.py
caption_refine_v2/: batch_runner.py  caption_refine_v2.md  config.py  cosmos_client.py  odd_schema.md  odd_tagging_practical.md  pipeline.py  prompts.py
caption_refine_v2/stages/: stage0_motion.py  stage1_caption.py  stage2_odd.py  stage3_verify.py  stage4_crossval.py  stage5_refine.py
docs/: container_setup.md  distributed_captioning.md  egomotion_download_guide.md
prompts/: caption_detail.yaml  caption_lane.yaml
shards/: shard_00.txt  shard_01.txt  shard_02.txt  shard_03.txt  shard_04.txt  shard_05.txt  shard_06.txt  shard_07.txt  shard_08.txt  shard_09.txt
