[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caption-refine"
version = "0.1.0"
description = "cosmos-reason2 기반 AV 캡션 정제 파이프라인"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "opencv-python-headless>=4.0",
  "numpy>=1.21",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "json-repair>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["caption_refine"]
